fix: large screen overflow

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -31,17 +31,6 @@
 
 @media screen and (min-width: 480px)  {
 
-  * {
-    overflow: hidden !important;
 
-}
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden !important; 
-}
 
 }
